--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,7 +1,7 @@
 name: Complex application CD
 on:
   workflow_run:
-    workflows: ["ci"]
+    workflows: ["Complex application CD"]
     types:
       - completed
 
