--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Login
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Push
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/homework_21
+        run: docker push homework21/my-app
