--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,13 +14,18 @@ jobs:
         working-directory: ./Homework_21
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Build Docker image
-        run: docker build -t my-app .
-
-      - name: Login
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push
-        run: docker push homework21/${{ secrets.DOCKER_USERNAME }}/my-app:latest
+      - uses: actions/checkout@v6
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/my-app:latest
