--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
-          context: .
+          context: ./Homework_21
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/my-app:latest
