--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,9 +9,9 @@ jobs:
   deploy:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./Homework_21
+#    defaults:
+ #     run:
+ #       working-directory: ./Homework_21
 
     steps:
       - uses: actions/checkout@v6
