--- a/.github/workflows/40.yaml
+++ b/.github/workflows/40.yaml
@@ -9,32 +9,30 @@ on:
   workflow_dispatch:
 
 
+AWS_REGION : <"us-east-1"> #Change to reflect your Region
+
+# Permission can be added at job level or workflow level    
+permissions:
+      id-token: write   # This is required for requesting the JWT
+      contents: read    # This is required for actions/checkout
 jobs:
-  terraform:
+  AssumeRoleAndCallIdentity:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
-    defaults:
-      run:
-        working-directory: 40
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
+      - name: Git clone the repository
+        uses: actions/checkout@v3
+      - name: configure aws credentials
+        uses: aws-actions/configure-aws-credentials@v1.7.0
         with:
-          fetch-depth: 0
+          role-to-assume: <arn:aws:iam::413648731451:role/for_github> #change to reflect your IAM role’s ARN
+          role-session-name: GitHub_to_AWS_via_FederatedOIDC
+          aws-region: ${{ env.AWS_REGION }}
+      # Hello from AWS: WhoAmI
+      - name: Sts GetCallerIdentity
+        run: |
+          aws sts get-caller-identity
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: latest
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v5
-        with:
-  #        role-to-assume: arn:aws:iam::413648731451:role/github-actions-role-${{ github.event.repository.name }}
-          role-to-assume: arn:aws:iam::413648731451:role/github-actions-role
-          aws-region: us-east-1
+Modify the workflow to reflect your AWS account information: 
       
       - name: Terraform Init
         run: terraform init
