--- a/.github/workflows/40.yaml
+++ b/.github/workflows/40.yaml
@@ -8,34 +8,32 @@ on:
       - '.github/workflows/40.yaml'
   workflow_dispatch:
 
+env:
+  AWS_REGION: us-east-1
 
-AWS_REGION : <"us-east-1"> #Change to reflect your Region
-
-# Permission can be added at job level or workflow level    
 permissions:
-      id-token: write   # This is required for requesting the JWT
-      contents: read    # This is required for actions/checkout
+  id-token: write
+  contents: read
+
 jobs:
   AssumeRoleAndCallIdentity:
     runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v3
-      - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@v1.7.0
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: <arn:aws:iam::413648731451:role/for_github> #change to reflect your IAM role’s ARN
+          role-to-assume: arn:aws:iam::413648731451:role/for_github
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: ${{ env.AWS_REGION }}
-      # Hello from AWS: WhoAmI
-      - name: Sts GetCallerIdentity
-        run: |
-          aws sts get-caller-identity
 
-Modify the workflow to reflect your AWS account information: 
-      
+      - name: Sts GetCallerIdentity
+        run: aws sts get-caller-identity
+
       - name: Terraform Init
         run: terraform init
-      
+
       - name: Terraform Plan
         run: terraform plan
