Add Terraform setup step to workflow
Added step to set up Terraform in the workflow.

--- a/.github/workflows/40.yaml
+++ b/.github/workflows/40.yaml
@@ -32,6 +32,9 @@ jobs:
       - name: Sts GetCallerIdentity
         run: aws sts get-caller-identity
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
       - name: Terraform Init
         run: terraform init
 
