--- a/.github/workflows/40.yaml
+++ b/.github/workflows/40.yaml
@@ -14,6 +14,9 @@ env:
 permissions:
   id-token: write
   contents: read
+defaults:
+  run:
+    working-directory: 40
 
 jobs:
   AssumeRoleAndCallIdentity:
