Update working directory in GitHub Actions workflow

--- a/.github/workflows/40.yaml
+++ b/.github/workflows/40.yaml
@@ -16,7 +16,7 @@ permissions:
   contents: read
 defaults:
   run:
-    working-directory: 40
+    working-directory: Homework_40
 
 jobs:
   AssumeRoleAndCallIdentity:
