Simplify Terraform initialization command

--- a/.github/workflows/40.yaml
+++ b/.github/workflows/40.yaml
@@ -39,7 +39,7 @@ jobs:
         run: aws sts get-caller-identity
 
       - name: Terraform Init
-        run: terraform init -reconfigure
+        run: terraform init
 
       - name: Terraform Plan
         run: terraform plan
