--- a/.github/workflows/40.yaml
+++ b/.github/workflows/40.yaml
@@ -43,3 +43,6 @@ jobs:
 
       - name: Terraform Plan
         run: terraform plan
+  
+      - name: Terraform Plan
+        run: terraform apply -auto-approve
