Add IAM role import step to workflow
Add step to import IAM role for GitHub Actions.

--- a/.github/workflows/40.yaml
+++ b/.github/workflows/40.yaml
@@ -41,6 +41,9 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
+      - name: Import role
+        run: terraform import aws_iam_role.github_actions_role github-actions-role
+
       - name: Terraform Plan
         run: terraform plan
   
