--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
 name: Complex application CI
 
-on:
-  push:
-    branches:
+#on:
+#  push:
+#    branches:
 #      - main
-  workflow_dispatch:
+##  workflow_dispatch:
 
 jobs:
   build:
